--- a/src/DetailsProduct/DetailsProduct.component.html
+++ b/src/DetailsProduct/DetailsProduct.component.html
@@ -7,7 +7,7 @@
 <GridLayout class="page page-content">
     <ScrollView>
         <GridLayout rows="auto, auto, auto">
-            <Image [src]="'http://192.168.1.139:8000'+productId.image" height="200" class="m-b-15"></Image>
+            <Image [src]="'http://192.168.1.27:8000'+productId.image" height="200" class="m-b-15"></Image>
 
             <StackLayout row="1" class="hr-light m-t-15 m-b-15"></StackLayout>
 
@@ -39,4 +39,4 @@
         </GridLayout>
     </ScrollView>
 </GridLayout>
-<Button text="ajouter aux paniers" class="my-button"></Button>
+<Button text="ajouter aux paniers" class="my-button"  (tap)="ontapButton()"></Button>
