--- a/src/app.css
+++ b/src/app.css
@@ -43,6 +43,19 @@ components that have the btn class name.
     margin-bottom: 10px;
 }
 
+.mybutton {
+    background-color:#1E90FF;
+    border-radius: 15;
+    margin-top: 20px;
+    color: white;
+    font-family: FontAwesome;
+    font-size: 24;
+    vertical-align: bottom;
+    border-radius: 20px;
+    width: 95%;
+    margin-bottom: 10px;
+}
+
 
 
 
